2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/SignalFunc.xml
	* en/Gtk/Signal.xml
	* en/Gtk/RcProperty.xml
	* en/Gtk/PrintFunc.xml
	* en/Gtk/PreviewType.xml: Marked "Do not use."
	* en/Gtk/RadioAction.xml
	* en/Gtk/Toolbar.xml
	* en/Gtk/Rc.xml: Added docs.
	
2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/*ImageData.xml: Removed, see
	bugzilla.ximian.com #70894.
	* en/Gtk/ListStore.xml
	* en/Gtk/MessageDialog.xml
	* en/Gtk/Main.xml
	* en/Gtk/Layout.xml
	* en/Gtk/NodeStore.xml
	* en/Gtk/Label.xml
	* en/Gtk/MatchType.xml
	* en/Gtk/Object.xml: Added docs.

2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/Item.xml
	* en/Gtk/Input.xml
	* en/Gtk/ToolItem.xml
	* en/Gtk/UIManager.xml: Added docs.
	* en/Gtk/IMStatusStyle.xml
	* en/Gtk/IMPreeditStyle.xml
	* en/Gtk/IMContextInfo.xml: Marked "do not use"
	pending resolution of bug 71021.
	
2005-01-04  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ScreenChangedArgs.xml
	* en/Gtk/PropertyNotifyEventArgs.xml
	* en/Gtk/PreActivateArgs.xml
	* en/Gtk/PopupContextMenuArgs.xml
	* en/Gtk/PostActivateArgs.xml
	* en/Gtk/PathClickedArgs.xml
	* en/Gtk/NoExposeEventArgs.xml
	* en/Gtk/PixbufInsertedArgs.xml: Documented event args.

2005-01-04  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/Image.xml
	* en/Gtk/RetrieveSurroundingArgs.xml
	* en/Gtk/IMMulticontext.xml
	* en/Gtk/FileInfo.xml
	* en/Gtk/FileInfoType.xml
	* en/Gtk/IMStatusStyle.xml
	* en/Gtk/RetrieveSurroundingHandler.xml
	* en/Gtk/IMPreeditStyle.xml: Added docs.

2005-01-03  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/IMContextSimple.xml
	* en/Gtk/IMContext.xml
	* en/Gtk/IMContextInfo.xml: Added docs.

2005-01-03  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/HButtonBox.xml
	* en/Gtk/Global.xml
	* en/Gtk/FontButton.xml: Add docs.
	
2005-01-03  Mike Kestner  <mkestner@novell.com>
	
	* en/Gtk/TreeNodeAttribute.xml : document ListOnly and add example.

2005-01-03  Shane Landrum  <epicene@pobox.com>
	
	* en/Gtk/DrawingArea.xml
	* en/Gtk/Expander.xml