@@ -205,9 +205,20 @@ Console.WriteLine ("The ID of the sockets window is {0}", socket.Id);
         <Parameter Name="wid" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="wid">a <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <summary>
+	  Reparents a pre-existing toplevel window into a <see cref="T:Gtk.Socket" />. 
+	</summary>
+        <param name="wid">a <see cref="T:System.UInt32" />, the window
+          ID of an existing toplevel window.</param>
+        <remarks>
+	  This is meant to embed clients that do not know about
+	  embedding into a <see cref="T:Gtk.Socket" />, however doing
+	  so is inherently unreliable, and using this function is not
+	  recommended.
+ 
+	  The <see cref="T:Gtk.Socket" /> must have already been added
+	  into a toplevel window before you can make this call.
+	</remarks>
       </Docs>
     </Member>
   </Members>
