@@ -1425,9 +1425,14 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Deprecated.</summary>
         <returns>a <see cref="T:Gdk.Font" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>
+	  The <see cref="T:Gdk.Font"/> to use for a given style. This
+	  is deprecated and should not be used in new code.  New code
+	  should use <see cref="P:Gtk.Style.FontDescription"/>
+	  instead.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="Unrealize">
@@ -1438,8 +1443,16 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>
+	   Event fired when the aspects of the style specific to a
+	   particular colormap and depth are being cleaned up.
+	</summary>
+        <remarks>
+	  A connection to this signal can be useful if a widget wants
+	  to cache objects like a <see cref="T:Gdk.GC"/> as object
+	  data on <see cref="T:Gtk.Style"/>.  This signal provides a
+	  convenient place to free such cached objects.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="Realize">
@@ -1450,8 +1463,15 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>
+	  Event triggered when the style has been initialized for a particular
+	  colormap and depth. 
+	</summary>
+        <remarks>
+	  Connecting to this signal is probably seldom
+	  useful since most of the time applications and widgets only
+	  deal with styles that have been already realized.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="OnUnrealize">
@@ -1486,9 +1506,9 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Deprecated. Do not use.</summary>
         <returns>a <see cref="T:Gtk.Style" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Unref">
@@ -1499,8 +1519,8 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Deprecated. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
