@@ -56,7 +56,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <param name="value">a <see cref="T:Gdk.Atom" /></param>
         <returns>a <see cref="T:Gdk.Atom" /></returns>
         <remarks />
@@ -71,7 +71,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
@@ -84,7 +84,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks />
       </Docs>
     </Member>
