@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An action which can be toggled between two states</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Action</BaseTypeName>
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fires the <see cref="E:Gtk.ToggleAction.Toggled"/> event.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -85,7 +85,7 @@
       </Parameters>
       <Docs>
         <summary>Internal constructor</summary>
-        <param name="raw">a <see cref="T:System.IntPtr" /></param>
+label displayed in menu items and on buttons        <param name="raw">a <see cref="T:System.IntPtr" /></param>
         <returns>a <see cref="T:Gtk.ToggleAction" /></returns>
         <remarks>This is not typically used by C# code.</remarks>
       </Docs>
@@ -101,13 +101,13 @@
         <Parameter Name="stock_id" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="label">a <see cref="T:System.String" /></param>
-        <param name="tooltip">a <see cref="T:System.String" /></param>
-        <param name="stock_id">a <see cref="T:System.String" /></param>
+        <summary>Public constructor.</summary>
+        <param name="name">a <see cref="T:System.String" />, a unique name for the action</param>
+        <param name="label">a <see cref="T:System.String" />, the label displayed in menu items and on buttons</param>
+        <param name="tooltip">a <see cref="T:System.String" />, a tooltip for the action</param>
+        <param name="stock_id">a <see cref="T:System.String" />, the stock icon to display in widgets representing the action</param>
         <returns>a <see cref="T:Gtk.ToggleAction" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -131,9 +131,11 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Whether the action should have proxies like a radio action.
+	</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Active">
@@ -144,9 +146,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <summary>Sets the checked state on the toggle action.</summary>
+        <returns>a <see cref="T:System.Boolean" />, <see langword="true"/> if checked</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Toggled">
@@ -157,8 +159,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Event fired when the toggle is changed.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
