@@ -121,11 +121,11 @@
         <Parameter Name="stock_id" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="stock_id">a <see cref="T:System.String" /></param>
+        <summary>Public constructor</summary>
+        <param name="name">a <see cref="T:System.String" />, a unique name for the action</param>
+        <param name="stock_id">a <see cref="T:System.String" />, the stock icon to display in widgets representing the action</param>
         <returns>a <see cref="T:Gtk.ToggleActionEntry" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -138,12 +138,12 @@
         <Parameter Name="activated" Type="System.EventHandler" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="stock_id">a <see cref="T:System.String" /></param>
-        <param name="activated">a <see cref="T:System.EventHandler" /></param>
+        <summary>Public constructor</summary>
+        <param name="name">a <see cref="T:System.String" />, a unique name for the action</param>
+        <param name="stock_id">a <see cref="T:System.String" />, the stock icon to display in widgets representing the action</param>
+        <param name="activated">a <see cref="T:System.EventHandler" />, a method to call when the toggle action is activated</param>
         <returns>a <see cref="T:Gtk.ToggleActionEntry" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -157,13 +157,13 @@
         <Parameter Name="active" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="stock_id">a <see cref="T:System.String" /></param>
-        <param name="activated">a <see cref="T:System.EventHandler" /></param>
-        <param name="active">a <see cref="T:System.Boolean" /></param>
+        <summary>Public constructor</summary>
+        <param name="name">a <see cref="T:System.String" />, a unique name for the action</param>
+        <param name="stock_id">a <see cref="T:System.String" />, the stock icon to display in widgets representing the action</param>
+        <param name="activated">a <see cref="T:System.EventHandler" />, a method to call when the toggle action is activated</param>
+        <param name="active">a <see cref="T:System.Boolean" />, <see langword="true"/> if the toggle action is currently checked</param>
         <returns>a <see cref="T:Gtk.ToggleActionEntry" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -180,16 +180,16 @@
         <Parameter Name="active" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="stock_id">a <see cref="T:System.String" /></param>
-        <param name="label">a <see cref="T:System.String" /></param>
-        <param name="accelerator">a <see cref="T:System.String" /></param>
-        <param name="tooltip">a <see cref="T:System.String" /></param>
-        <param name="activated">a <see cref="T:System.EventHandler" /></param>
-        <param name="active">a <see cref="T:System.Boolean" /></param>
+        <summary>Public constructor</summary>
+        <param name="name">a <see cref="T:System.String" />, a unique name for the action</param>
+        <param name="stock_id">a <see cref="T:System.String" />, the stock icon to display in widgets representing the action</param>
+        <param name="label">a <see cref="T:System.String" />, the label displayed in menu items and on buttons</param>
+        <param name="accelerator">a <see cref="T:System.String" />, the accelerator key sequence for the action</param>
+        <param name="tooltip">a <see cref="T:System.String" />, a tooltip for the action</param>
+        <param name="activated">a <see cref="T:System.EventHandler" />, a method to call when the toggle action is activated</param>
+        <param name="active">a <see cref="T:System.Boolean" />, <see langword="true"/> if the toggle action is currently checked</param>
         <returns>a <see cref="T:Gtk.ToggleActionEntry" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
