@@ -10,7 +10,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>A button box should be used to provide a consistent layout of buttons throughout your application. This box provides a way of</summary>
+    <summary>A button box should be used to provide a consistent layout of buttons throughout your application. This box provides a way of laying out buttons vertically.</summary>
     <remarks>
       <para>The layout of buttons in this type of box is determined by the box's <see cref="T:Gtk.ButtonBoxStyle" />.</para>
       <para>Methods for manipulating button boxes are provided in the super classes, <see cref="T:Gtk.ButtonBox" /> and <see cref="T:Gtk.Box" />.</para>
@@ -109,9 +109,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The default layout style for vertical button boxes.</summary>
         <returns>a <see cref="T:Gtk.ButtonBoxStyle" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SpacingDefault">
@@ -122,9 +122,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The default spacing (in pixels) for vertical button boxes.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
