@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Internal. Do not use.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,8 +37,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="WindowActivate">
@@ -50,8 +50,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="WindowDeactivate">
@@ -63,8 +63,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="RequestFocus">
@@ -76,8 +76,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusIn">
@@ -89,8 +89,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusOut">
@@ -102,8 +102,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusNext">
@@ -115,8 +115,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusPrev">
@@ -128,8 +128,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GrabKey">
@@ -141,8 +141,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="UngrabKey">
@@ -154,8 +154,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ModalityOn">
@@ -167,8 +167,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ModalityOff">
@@ -180,8 +180,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GtkGrabKey">
@@ -193,8 +193,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GtkUngrabKey">
@@ -206,8 +206,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Internal. Do not use.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
