@@ -1,5 +1,15 @@
 2005-01-05  Shane Landrum  <epicene@pobox.com>
 
+	* en/Gtk/XEmbedMessageType.xml
+	* en/Gtk/TargetPair.xml : Marked "Do not use."
+	* en/Gtk/ToggleAction.xml
+	* en/Gtk/Socket.xml
+	* en/Gtk/Style.xml
+	* en/Gtk/ToggleActionEntry.xml
+	* en/Gtk/VButtonBox.xml: Added docs.
+
+2005-01-05  Shane Landrum  <epicene@pobox.com>
+
 	* en/Gtk/SignalFunc.xml
 	* en/Gtk/Signal.xml
 	* en/Gtk/RcProperty.xml
